fixed it for mobile

--- a/index.html
+++ b/index.html
@@ -1,121 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Reddit+Sans:ital,wght@0,200..900;1,200..900&display=swap"
-			rel="stylesheet"
-		/>
-		<link rel="stylesheet" href="./style.css" />
-		<title>About Bianca</title>
-		<link rel="icon" type="image/x-icon" href="./yarn_transparent.png" />
-	</head>
-	<body>
-		<!--A hero section that provides a brief introduction to you and your background.-->
-		<img src="./yarn_transparent.png" alt="yarn logo" id="logo1" />
-		<img src="./yarn_transparent.png" alt="yarn logo" id="logo2" />
-		<div class="introduction">
-			<h1>I'm Bianca</h1>
-			<img src="./Profilepic.jpg" alt="profile pic of me" />
-			<h2>I want to become a programmer</h2>
-		</div>
-		<!-- A resume page that lists your education, work experience, skills, and other relevant information (you can link to Capstone project 1).-->
-		<main>
-			<div class="compartiment resume">
-				<h2>Resume</h2>
-				<div class="resumepart">
-					<h3>Education</h3>
-					<ol>
-						<li>VU Amsterdam: BSc Farmaceutical Sciences</li>
-						<li>VU Amsterdam: MSc Organic Chemistry</li>
-						<li>VU Amsterdam: MSc Education (teacher chemistry)</li>
-					</ol>
-				</div>
-				<div class="resumepart">
-					<h3>Skills and certificats</h3>
-					<ul>
-						<li>Python beginner, got a certificat from Udemy</li>
-						<li>
-							Webdevelopment beginner, certificat from Winc Academy and doing a
-							course on Udemy.
-							<ul>
-								<li>HTML</li>
-								<li>CSS</li>
-								<li>Javascript</li>
-							</ul>
-						</li>
-						<li>Office 365</li>
-					</ul>
-				</div>
-				<div class="resumepart">
-					<h3>Working experience</h3>
-					<p>
-						I have no relevant working experience yet. I have worked at a beach
-						restaurant and some schools as a teacher and later as a technical
-						support for chemistry lessons.
-					</p>
-				</div>
-			</div>
-			<!-- A section that showcases any projects or work that you have done in the past.-->
-			<div class="compartiment projects">
-				<h2>Websites that I have made before</h2>
-				<img
-					src="./wat_zijn_garen.png"
-					alt="piciture of a previous made website"
-				/>
-				<ul>
-					<li>
-						A
-						<a href="https://watzijngaren.netlify.app/" target="_blank"
-							>website</a
-						>
-						about yarn, using HTML and CSS.
-					</li>
-					<li>
-						A <a href="https://hbsdewaert.nl/" target="_blank">website</a> for
-						the archery club, using Wordpress.
-					</li>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Reddit+Sans:ital,wght@0,200..900;1,200..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.css" />
+    <title>About Bianca</title>
+    <link rel="icon" type="image/x-icon" href="./yarn_transparent.png" />
+  </head>
+  <body>
+    <!--A hero section that provides a brief introduction to you and your background.-->
+    <img src="./yarn_transparent.png" alt="yarn logo" id="logo1" />
+    <img src="./yarn_transparent.png" alt="yarn logo" id="logo2" />
+    <div class="introduction">
+      <h1>I'm Bianca</h1>
+      <img src="./Profilepic.jpg" alt="profile pic of me" />
+      <h2>I want to become a programmer</h2>
+    </div>
+    <!-- A resume page that lists your education, work experience, skills, and other relevant information (you can link to Capstone project 1).-->
+    <main>
+      <div class="compartiment resume">
+        <h2>Resume</h2>
+        <div class="resumepart">
+          <h3>Education</h3>
+          <ol>
+            <li>VU Amsterdam: BSc Farmaceutical Sciences</li>
+            <li>VU Amsterdam: MSc Organic Chemistry</li>
+            <li>VU Amsterdam: MSc Education (teacher chemistry)</li>
+          </ol>
+        </div>
+        <div class="resumepart">
+          <h3>Skills and certificats</h3>
+          <ul>
+            <li>Python beginner, got a certificat from Udemy.</li>
+            <li>
+              Webdevelopment beginner, certificat from Winc Academy and doing a course on
+              Udemy.
+              <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Javascript</li>
+              </ul>
+            </li>
+            <li>Office 365</li>
+          </ul>
+        </div>
+        <div class="resumepart">
+          <h3>Working experience</h3>
+          <p>
+            I have no relevant working experience yet. I have worked at a beach restaurant
+            and some schools as a teacher and later as a technical support for chemistry
+            lessons.
+          </p>
+        </div>
+      </div>
+      <!-- A section that showcases any projects or work that you have done in the past.-->
+      <div class="compartiment projects">
+        <h2>Websites that I have made before</h2>
 
-					<li>
-						Designed a
-						<a href="https://foresthotelnl.my.canva.site/">website</a> for a
-						hotel using Canva.
-					</li>
-					<li>
-						<a href="https://biancablas.github.io/TinCat/">Datingsite</a>
-						for cats using bootstrap.
-					</li>
-					<li>
-						Made this
-						<a href="https://bianca-en-haar-huisdieren.webflow.io/">website</a>
-						with webflow. This one gives me a headache. Everything looks fine in
-						the designer. I go on and publish, suddenly my pics are turned 90
-						degrees, or are extremely small.
-					</li>
-				</ul>
-			</div>
-			<!-- An about me section that provides additional information about you and your interests.-->
-			<div class="compartiment hobbies">
-				<h2>My hobbies and interests</h2>
-				<p>
-					I love everything that has to do with yarn. Crochet, knitting,
-					embroidery. But ofcourse my favorite hobby is collecting yarn. I
-					definately have more yarn than I could use in one lifetime. I also
-					have way to many crochet and knitting projects lying around. A
-					different kind of project for every mood and concentration level. When
-					I have a bit more energy, I will do some archery as well.
-				</p>
-				<img src="./yarnroom2.jpeg" alt="room full of yarn" />
-			</div>
-			<!-- A contact me section that includes information for users to get in touch with you.
+        <ul>
+          <li class="project">
+            <a href="https://watzijngaren.netlify.app/" target="_blank">
+              <img src="./wat-zijn-garen.png" alt="yarn website" />
+              A website about yarn, using HTML and CSS.</a
+            >
+          </li>
+
+          <li class="project">
+            <a href="https://hbsdewaert.nl/" target="_blank">
+              <img src="./archery.png" alt="archery website" />
+              A website for the archery club, using Wordpress.</a
+            >
+          </li>
+
+          <li class="project">
+            <a href="https://foresthotelnl.my.canva.site/">
+              <img src="./Canva.png" alt="website made with canva" />
+              Designed a website for a hotel using Canva.
+            </a>
+          </li>
+
+          <li class="project">
+            <a href="https://biancablas.github.io/TinCat/">
+              <img src="./TinCat.png" alt="tincat" />
+              Datingsite for cats using bootstrap.</a
+            >
+          </li>
+
+          <li class="project">
+            <a href="https://bianca-en-haar-huisdieren.webflow.io/">
+              <img src="./Webflow.png" alt="website about my pets made with webflow" />
+              Made this website with webflow.
+            </a>
+          </li>
+        </ul>
+        <p>
+          Webflow gives me a headache. Everything looks fine in the designer. I go on and
+          publish, suddenly som of my pics are turned 90 degrees, or are extremely small.
+          I gave up trying to fix it, since I get logged out all the time as well.
+        </p>
+      </div>
+      <!-- An about me section that provides additional information about you and your interests.-->
+      <div class="compartiment hobbies">
+        <h2>My hobbies and interests</h2>
+        <p>
+          I love everything that has to do with yarn. Crochet, knitting, embroidery. But
+          ofcourse my favorite hobby is collecting yarn. I definately have more yarn than
+          I could use in one lifetime. I also have way to many crochet and knitting
+          projects lying around. A different kind of project for every mood and
+          concentration level. When I have a bit more energy, I will do some archery as
+          well.
+        </p>
+        <img src="./yarnroom2.jpeg" alt="room full of yarn" />
+      </div>
+      <!-- A contact me section that includes information for users to get in touch with you.
     -->
-			<div class="contact">
-				<h2>Contact</h2>
-				<p>Mail: bianca@blassie.nl</p>
-			</div>
-		</main>
-	</body>
+      <div class="contact">
+        <h2>Contact</h2>
+        <p>Mail: bianca@blassie.nl</p>
+      </div>
+    </main>
+  </body>
 </html>
