--- a/index.html
+++ b/index.html
@@ -122,7 +122,23 @@
     -->
       <div class="contact">
         <h2>Contact</h2>
-        <p>Mail: bianca@blassie.nl</p>
+        <form>
+          <label for="fname">First Name</label>
+          <input type="text" id="fname" name="firstname" placeholder="Your name.." />
+
+          <label for="lname">Last Name</label>
+          <input type="text" id="lname" name="lastname" placeholder="Your last name.." />
+
+          <label for="subject">Subject</label>
+          <textarea
+            id="subject"
+            name="subject"
+            placeholder="This form won't do anything.."
+            style="height: 200px"
+          ></textarea>
+          <div></div>
+          <input type="submit" value="Submit" id="button" />
+        </form>
       </div>
     </main>
   </body>
